--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <li><h2>Donuts</h2>
       <img src="donut.jpeg" alt="glazed donut with bite in it"></li>
       <li><h2>Pasta</h2>
-      <img src="Spaghetti_al_Pomodoro1.jpeg" alt="plate of spaghetti"></li> 
+      <img src="Spaghetti.jpeg" alt="plate of spaghetti"></li> 
        <li><h2>Birthday Cake</h2>
       <img src="cake.jpeg" alt="rainbow birthday cake"></li> 
        <li><h2>Pie</h2>
